; ModuleID = '/home/carl/AnghaBench/libgit2/tests/index/extr_reuc.c_test_index_reuc__cleaned_on_reset_hard.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/index/extr_reuc.c_test_index_reuc__cleaned_on_reset_hard.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"3a34580\00", align 1
@GIT_RESET_HARD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_index_reuc__cleaned_on_reset_hard() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @repo, align 4
  %3 = call i32 @git_revparse_single(i32** %1, i32 %2, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = call i32 (...) @test_index_reuc__add()
  %6 = load i32, i32* @repo, align 4
  %7 = load i32*, i32** %1, align 8
  %8 = load i32, i32* @GIT_RESET_HARD, align 4
  %9 = call i32 @git_reset(i32 %6, i32* %7, i32 %8, i32* null)
  %10 = call i32 @cl_git_pass(i32 %9)
  %11 = call i32 (...) @reuc_entry_exists()
  %12 = icmp eq i32 %11, 0
  %13 = zext i1 %12 to i32
  %14 = call i32 @cl_assert(i32 %13)
  %15 = load i32*, i32** %1, align 8
  %16 = call i32 @git_object_free(i32* %15)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_revparse_single(i32**, i32, i8*) #1

declare dso_local i32 @test_index_reuc__add(...) #1

declare dso_local i32 @git_reset(i32, i32*, i32, i32*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @reuc_entry_exists(...) #1

declare dso_local i32 @git_object_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
